Proportional editing visualization are in the wrong place when edit grease pencil object #58244

Closed
opened 2018-11-30 01:03:58 +01:00 by Valentin · 6 comments
Member

System Information
OS: Windows 10
gpu: gtx 1050

Blender Version
Broken:
2.80 beta, 26d5a3625e, 2018-11-29

Short description of error
When edit curve of a grease pencil object with proportional editing activated the visualization is on the right( i mean not under the mouse)
N.B: by visualization i mean the circle that show the area of effect of proportional editing

Steps to reproduce the error
Blend file: bug_proportionnal-editing_in_GP.blend

  • Select object "Stroke"
  • Go to edit mode
  • Edit whatever point of the object (with propertional editing)
  • The visualization appear on the right
**System Information** OS: Windows 10 gpu: gtx 1050 **Blender Version** Broken: 2.80 beta, 26d5a3625ed, 2018-11-29 **Short description of error** When edit curve of a grease pencil object with proportional editing activated the visualization is on the right( i mean not under the mouse) N.B: by visualization i mean the circle that show the area of effect of proportional editing **Steps to reproduce the error** Blend file: [bug_proportionnal-editing_in_GP.blend](https://archive.blender.org/developer/F5761113/bug_proportionnal-editing_in_GP.blend) * Select object "Stroke" * Go to edit mode * Edit whatever point of the object (with propertional editing) * The visualization appear on the right
Author
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator
Author
Member

Edit: the circle of proportional editing not appear necessarily at the right, it depend of the camera viewport, but still not at the right place.

Edit: the circle of proportional editing not appear necessarily at the right, it depend of the camera viewport, but still not at the right place.

Added subscriber: @antoniov

Added subscriber: @antoniov

The Circle is not using the object location.

The Circle is not using the object location.
Antonio Vazquez self-assigned this 2018-11-30 16:34:27 +01:00

This issue was referenced by 4e92cc2759

This issue was referenced by 4e92cc275936e4fa5e2c2a0d03e9649fb36c7bf8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58244
No description provided.