Fix T58244: Proportional editing center is wrong

The global center was not calculated at all. Now a center is calculated using the selected points